# mobile_robots_motion_planning

./: .gitignore  LICENSE  README.md
Assignments/: hw_3_updated.rar
hw1/src/grid_path_searcher/: CMakeLists.txt
hw1/src/grid_path_searcher/launch/: demo.launch
hw1/src/grid_path_searcher/launch/rviz_config/: demo.rviz
hw1/src/grid_path_searcher/src/: demo_node.cpp
hw2/src/grid_path_searcher/: CMakeLists.txt
hw2/src/grid_path_searcher/launch/: demo.launch
hw2/src/grid_path_searcher/src/: Astar_searcher.cpp  demo_node.cpp
hw4/scripts/: symbol_compute.py
hw4/src/grid_path_searcher/: CMakeLists.txt
hw4/src/grid_path_searcher/include/: hw_tool.h
hw4/src/grid_path_searcher/src/: demo_node.cpp  hw_tool.cpp
hw5/src/lec5_hw/: CMakeLists.txt  package.xml
hw5/src/lec5_hw/config/: click_gen.rviz  click_gen.yaml
hw5/src/lec5_hw/include/lec5_hw/: trajectory.hpp  visualizer.hpp
hw5/src/lec5_hw/launch/: click_gen.launch
hw5/src/lec5_hw/src/: click_gen.cpp
